Fix out of place text on right oriented bubbled messages.

--- a/file/style/be.bastelstu.wcf.chat.less
+++ b/file/style/be.bastelstu.wcf.chat.less
@@ -312,6 +312,10 @@
 								.username {
 									float: right;
 								}
+								
+								.text {
+									clear: left;
+								}
 							}
 						}
 					}
